--- a/mysite.css
+++ b/mysite.css
@@ -41,9 +41,138 @@ a {
     line-height: 70px;
 }
 
-main {
+.main-visual {
     height: 650px;
     background-image: url(img/mv.png);
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
+}
+
+.main-visual-font {
+    
+    text-align: center;
+    color: #FAFAFA;
+}
+
+.main-visual-title {
+    font-size: 64px;
+    padding: 200px 0 10px 0;
+}
+
+.main-visual-text {
+    font-size: 20px;
+}
+
+.portfolio {
+    background-color: #ECEFF1;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.portfolio-box {
+    width: 920px;
+}
+
+.sub-title {
+    font-size: 32px;
+    color: #000;
+    position: relative;
+}
+
+.sub-title::after {
+    background-color: #EC715F;
+    height: 3px;
+    width: 70px;
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    display: block;
+    bottom: -5;
+    content: "";
+    margin: 8px auto 0 auto;
+}
+
+.sub-text {
+    font-size: 16px;
+    color: #000;
+    margin: 30px 0;
+}
+
+.picture-item {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.portfolio-picture {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 250px;
+}
+
+.picture-item > div:nth-child(1) {
+    background-image: url(img/sketch.jpg);
+    margin: 0 10px 10px 0;
+}
+
+.picture-item > div:nth-child(2) {
+    background-image: url(img/websuku.png);
+    margin: 0 10px 10px 0;
+}
+
+.picture-item > div:nth-child(3) {
+    background-image: url(img/write.jpg);
+    margin-bottom: 10px;
+}
+
+.picture-item > div:nth-child(4) {
+    background-image: url(img/webcamp.png);
+    margin-right: 10px;
+}
+
+.picture-item > div:nth-child(5) {
+    background-image: url(img/talk.jpg);
+    margin-right: 10px;
+}
+
+.picture-item > div:nth-child(6) {
+    background-image: url(img/webcamp-mother.png);
+    margin-bottom: 90px;
+}
+
+.feature {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.feature-box {
+    width: 980px;
+}
+
+.feature-list {
+    display: flex;
+    justify-content: center;
+}
+
+.feature-item {
+    width: 320px;
+    height: auto;
+}
+
+.fa-solid {
+    font-size: 60px;
+}
+
+footer {
+    background-color: #EC715F;
+    height: 60px;
+}
+
+.footer-text {
+    font-size: 16px;
+    color: #FAFAFA;
+    text-align: center;
+    line-height: 60px;
 }
