--- a/mysite.css
+++ b/mysite.css
@@ -25,6 +25,10 @@ a {
     float: left;
 }
 
+.drawer_hidden {
+    display: none;
+}
+
 .nav-list {
     float: right;
 }
@@ -49,7 +53,6 @@ a {
 }
 
 .main-visual-font {
-    
     text-align: center;
     color: #FAFAFA;
 }
@@ -78,7 +81,7 @@ a {
 .sub-title {
     font-size: 32px;
     position: relative;
-    margin-top: 90px;
+    margin: 90px 0 8px 0;
 }
 
 .sub-title::after {
@@ -91,7 +94,6 @@ a {
     display: block;
     bottom: -5;
     content: "";
-    margin: 8px auto 0 auto;
 }
 
 .sub-text {
@@ -296,4 +298,190 @@ footer {
     color: #FAFAFA;
     text-align: center;
     line-height: 60px;
+}
+
+@media screen and (max-width:767px) {
+    .heading {
+        height: 50px;
+    }
+    
+    .logo-nav {
+        width: 90%;
+    }
+    
+    .logo {
+        height: 50px;
+    }
+    
+    .drawer_open {
+        display: flex;
+        height: 40px;
+        width: 40px;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        z-index: 100;/* 重なり順を一番上にする */
+        cursor: pointer;
+        border: 1px solid #FFF;
+        margin: 5px 0;
+        float: right;
+    }
+    
+    .drawer_open span,.drawer_open span:before,.drawer_open span:after {
+        content: '';
+        display: block;
+        height: 3px;
+        width: 30px;
+        background: #FFF;
+        transition: 0.5s;
+        position: absolute;
+    }
+    
+    .drawer_open span:before {
+        bottom: 8px;
+    }
+    
+    .drawer_open span:after {
+        top: 8px;
+    }
+    
+    .nav-list {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 100%;
+        z-index: 99;
+        background: #fff;
+        transition: .5s;
+    }
+    
+    #drawer_input:checked ~ .nav-list {
+        left: 0;
+    }
+    
+    .main-visual {
+        background-image: url(img/code.png);
+        height: 650px;
+        display: flex;
+        justify-content: center;
+    }
+    
+    .main-visual-font {
+        width: 90%;
+    }
+    
+    .main-visual-title {
+        font-size: 40px;
+    }
+    
+    .main-visual-text {
+        font-size: 18px;
+    }
+    
+    .portfolio-box {
+        width: 90%;
+    }
+    
+    .picture-item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .picture-item > div:nth-child(odd) {
+        position: fixed;
+        top: 0;
+        left: 100%;
+    }
+    
+    .picture-item > div:nth-child(even) {
+        width: 300px;
+        height: 250px;
+        margin: 0;
+    }
+    
+    .picture-item > div:nth-child(2) {
+        margin-bottom: 10px;
+    }
+    
+    .picture-item > div:nth-child(4) {
+        margin-bottom: 10px;
+    }
+    
+    .picture-item > div:nth-child(6) {
+        margin-bottom: 90px;
+    }
+    
+    .feature-box {
+        width: 90%;
+        margin-bottom: 80px;
+    }
+    
+    .feature-list {
+        display: block;
+    }
+    
+    .feature-item {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+    
+    .feature-list > div:nth-child(2) {
+        margin: 0 0 10px 0;
+    }
+    
+    .feature-text {
+        text-align: left;
+    }
+    
+    .profile-box {
+        width: 90%;
+    }
+    
+    .self-introduction {
+        flex-direction: column;
+    }
+    
+    .profile-icon-box {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    
+    .profile-text {
+        width: 100%;
+        text-align: center;
+    }
+    
+    .contact-box {
+        width: 90%;
+    }
+    
+    .contact-sns {
+        display: block;
+    }
+    
+    .mail-tel {
+        width: 100%;
+    }
+    
+    .mail-tel-box {
+        text-align: center;
+    }
+    
+    .sns {
+        width: 100%;
+    }
+    
+    .sns-box {
+        text-align: center;
+    }
+    
+    .sns-icon > i:nth-child(2) {
+        margin: 0 8px;
+    }
+    
+    footer {
+        height: 60px;
+    }
 }
